--- a/.check-author.yml
+++ b/.check-author.yml
@@ -3,4 +3,5 @@ exclude:
   languages
 
 mapping:
-  "David Molineus <david.molineus@netzmacht.de>": ["David Molineus <david.molineus@netzmacht.de>", "David Molineus <mail@netzmacht.de>"]
+  "David Molineus <david.molineus@netzmacht.de>":
+    - "David Molineus <mail@netzmacht.de>"
