--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "require":{
         "php":">=5.3.4",
         "contao-community-alliance/composer-plugin": "~2.0",
-        "contao/core":">=3.2,<3.5-dev",
+        "contao/core":">=3.2,<3.6-dev",
         "contao-bootstrap/core": "~1.0",
         "netzmacht/html": "~1.1",
         "contao-community-alliance/meta-palettes":"~1.4",
@@ -50,7 +50,8 @@
             }
         },
         "branch-alias": {
-            "dev-master": "1.0.x-dev"
+            "dev-master": "1.0.x-dev",
+            "dev-develop": "1.1.x-dev"
         }
     },
     "minimum-stability": "dev",
