--- a/composer.json
+++ b/composer.json
@@ -2,14 +2,14 @@
     "name":"contao-bootstrap/tab",
     "description":"Bootstrap tab component for Contao CMS",
     "keywords":["bootstrap", "Contao", "tab", "component"],
-    "type":"contao-module",
-    "license":"LGPL-3.0+",
+    "type":"contao-bundle",
+    "license":"LGPL-3.0-or-later",
     "authors":[
         {
             "name":"David Molineus",
             "email":"mail@netzmacht.de",
-            "homepage":"http://www.netzmacht.de",
-            "role":"Project leader"
+            "homepage":"https://netzmacht.de",
+            "role":"Developer"
         }
     ],
     "support":{
@@ -20,40 +20,36 @@
     },
     "require":{
         "php":">=5.3.4",
-        "contao-community-alliance/composer-plugin": "~2.0",
-        "contao/core":">=3.2,<3.6-dev",
-        "contao-bootstrap/core": "~1.0",
-        "netzmacht/html": "~1.1",
-        "contao-community-alliance/meta-palettes":"~1.4",
+        "contao/core-bundle":"^4.4",
+        "contao-bootstrap/core": "~2.0",
+        "netzmacht/html": "~2.0",
+        "contao-community-alliance/meta-palettes":"~2.0",
         "menatwork/contao-multicolumnwizard":"~3.2"
     },
     "require-dev": {
-        "netzmacht/contao-build-tools": "~1.1"
+        "contao/manager-plugin": "^2.0",
+        "phpcq/all-tasks": "^1.2"
     },
     "conflict": {
         "netzmacht/contao-bootstrap": "*",
         "contao-bootstrap/components": "*"
     },
     "autoload": {
-        "psr-0": { "Netzmacht\\Bootstrap\\Tab": "src/" }
+        "psr-4": { "ContaoBootstrap\\Tab\\": "src/" }
     },
     "extra":{
         "contao": {
-            "sources":{
-                "module": "system/modules/bootstrap-tab"
-            },
             "transifex": {
                 "project": "contao-bootstrap",
                 "prefix": "tab-",
-                "languages_cto": "module/languages",
+                "languages_cto": "src/Resources/contao/languages",
                 "languages_tx": ".tx"
             }
         },
         "branch-alias": {
             "dev-master": "1.0.x-dev",
-            "dev-develop": "1.1.x-dev"
+            "dev-develop": "1.1.x-dev",
+            "dev-release/2.0.0": "2.0.x-dev"
         }
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    }
 }
