--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,25 @@
-.tx/
+# OS
+.DS_Store
+Thumbs.db
+.directory
+
+# IDEs 
+.buildpath
+.project
+.settings/
+.build/
+.external*/
 .idea/
+nbproject/
+
+# composer related
 vendor/
-module/.skip
 composer.lock
+
+# build
+build/
+build.properties
+docs/_build
+
+# Translations
+.tx
