--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "netzmacht/html": "~2.0",
         "contao-community-alliance/meta-palettes":"~2.0",
         "menatwork/contao-multicolumnwizard":"~3.2",
-        "beberlei/assert": "^2.9"
+        "beberlei/assert": "^2.9",
+        "netzmacht/contao-toolkit": "^3.0"
     },
     "require-dev": {
         "contao/manager-plugin": "^2.0",
