--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,15 @@
         "php":"^7.1",
         "contao/core-bundle":"^4.4",
         "contao-bootstrap/core": "~2.0",
-        "netzmacht/html": "~2.0",
-        "contao-community-alliance/meta-palettes":"~2.0",
+        "contao-community-alliance/meta-palettes":"~2.0 || ~ 1.11",
         "menatwork/contao-multicolumnwizard":"~3.2",
         "beberlei/assert": "^2.9",
+        "netzmacht/html": "~2.0",
+        "symfony/config": "^3.3 || ^4.0",
+        "symfony/dependency-injection": "^3.3 || ^4.0",
+        "symfony/http-kernel": "^3.3 || ^4.0",
+        "symfony/templating": "^3.3 || ^4.0",
+        "symfony/translation": "^3.3 || ^4.0",
         "netzmacht/contao-toolkit": "^3.0"
     },
     "require-dev": {
