--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,16 @@
+dist: xenial
+
+addons:
+  apt:
+    packages:
+      - ant-optional
+
 language: php
 
 php:
-  - "7.1"
+  - "7.3"
   - "7.2"
+  - "7.1"
 
 env:
   - CONTAO_VERSION=contao/core-bundle ~4.4.0
@@ -12,9 +20,8 @@ env:
 matrix:
   exclude:
 
-sudo: false
-
 install:
+  - echo "memory_limit = -1" > travis.php.ini && phpenv config-add travis.php.ini
   - travis_retry composer self-update && composer --version
   - travis_retry composer require $CONTAO_VERSION --no-update
   - travis_retry composer update --prefer-dist --no-interaction
