--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "symfony/config": "^3.3 || ^4.0",
         "symfony/dependency-injection": "^3.4.26 || ^4.1.12",
         "symfony/http-kernel": "^3.3 || ^4.0",
-        "symfony/templating": "^3.3 || ^4.0",
+        "symfony/templating": "^3.3 || ^4.0 || ^5.0",
         "symfony/translation": "^3.3 || ^4.0",
         "netzmacht/contao-toolkit": "^3.0"
     },
