add php 8, remove grid dependency

--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,8 @@
         "source":"https://github.com/contao-bootstrap/tab"
     },
     "require":{
-        "php":"^7.1",
+        "php":"^7.1 || ^8,0",
         "contao/core-bundle":"^4.4",
-        "contao-bootstrap/core": "~2.0",
         "contao-community-alliance/meta-palettes":"~2.0 || ~1.11",
         "menatwork/contao-multicolumnwizard-bundle":"~3.2",
         "beberlei/assert": "^2.9 || ^3.0",
