--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     },
     "require":{
         "php":"^7.1 || ^8.0",
-        "contao/core-bundle":"^4.4",
+        "contao/core-bundle":"^4.4 || ^5.2",
         "contao-community-alliance/meta-palettes":"~2.0 || ~1.11",
         "menatwork/contao-multicolumnwizard-bundle":"~3.2",
         "beberlei/assert": "^2.9 || ^3.0"
